# ferret

./: .gitignore  .gitmodules  AGENT_EVOLUTION.md  CLAUDE.md  README.md  __init__.py  agents.py  cc_goal.py  main.py  orchestrator.py  pick_gpu.sh  profile.py  prompts.py  pyproject.toml  state.py  task_spec.py  workspace.py
api/: README.md  __init__.py  agents.py  cost_tracker.py  main.py  orchestrator.py  remote.py
baselines/: run_decode_linear_baseline.py
correctness/: kimi-moe-w13-precision-fix.md
docs/: INDEX.md  MAPPING.md  WORKFLOW_AUDIT.md  design-space.md  kernelwiki-refresh.md
scripts/: cc-init.sh  cc-run.sh  check_resource_refs.py  mpk_validate.sh  remote_run.sh  run.sh  run_forever.sh  update_kernelwiki.sh
tasks/: attention-gqa-decode-mirage-shape.yaml  dense-fp8-gemm-decode-splitk.yaml  dsv3-router-gemm-decode.yaml  fp8-gemm-dense-tp8.yaml  fp8-gemm-prefill-large-m.yaml  fp8-gemm-prefill-tp8.yaml  fp8-group-gemm-dsv3-decode.yaml  fp8-group-gemm-dsv3-prefill.yaml  fp8-group-gemm-w2-compact-dispatch.yaml  fp8-mla-decode-dsv4.yaml  gqa-decode-qwen3-8b.yaml  kimi-moe-w13-int4-grouped-gemm.yaml  mha-prefill-blackwell-8warp.yaml  mha-prefill-blackwell.yaml  mla-mtp-decode-q1to4-kv4096.yaml  mla-mtp-decode-tp2-kv4096.yaml  mla-mtp-decode-tp4-kv4096.yaml  mla-mtp-decode-tp8-kv4096.yaml  mla-prefill-tp2-s1024.yaml  mla-prefill-tp4-s1024.yaml  mla-prefill-tp8-absorbed-correct.yaml  mla-prefill-tp8-chunked-batched.yaml  mla-prefill-tp8-chunked.yaml  mla-prefill-tp8-longseq.yaml  mla-prefill-tp8-s1024.yaml  mla-prefill-tp8-unabsorbed-correct.yaml  template.yaml  (+6 more)
(+199 files in other folders)
