[project]
name = "ferret"
version = "0.2.0"
description = "Autonomous CUDA kernel optimization agent — Claude Code mainthread + scoped subagents (planner / iterator / profiler / reviewer / codex-dispatcher / memory-keeper / kernel-extractor) operating on per-workspace .git histories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

# ferret runs in place: each workspace is driven by a Claude Code mainthread
# launched via scripts/cc-run.sh. There is no Python entry point that drives
# the agent loop anymore; ferret.{state,profile,task_spec,cc_goal} are pure
# helper modules invoked by the subagents through Bash. Future work: src/
# restructure + ship as an installable package.
